# rag_for_pdfs

./: .env.example  .gitignore  README.md  analyze_retrieval_vs_answer_quality.py  extract_correct_answers_with_failed_retrieval.py  gemini_answer_generation.py  gemini_filesearch.py  gemini_filesearch_retrieval_evaluation.py  pyproject.toml
src/catalog/: drop_titles.py  product_names.py
src/evaluation/: answer_generation_evaluation.py  evaluate_answers.py  generate_answers.py  pdf_answers_evaluation.py  retrieval_evaluation.py
src/generation/: generate_answers.py  generate_pdf_answers.py  pdf_answers_generation.py
src/ingestion/: ingest_pdf_chunks.py  ingest_pdf_chunks_after_string_matching.py  ingest_section_chunks.py  pdf_chunks_ingestion.py
src/pdfchunkingexperiment/: README.md  pdf_answers_evaluation.py  pdf_answers_generation.py  pdf_chunks_ingestion.py  pdf_chunks_retrieval.py  pdf_create_hnsw_indexes.py  pdf_documents_chunking.py  run_pdf_chunking_experiment.py
src/postfiltering/: product_postfilter.py
src/preprocessing/: pdf_documents_chunking.py  section_wise_chunking.py
src/reranking/: cohere_reranking.py  colbert_reranking.py  entity_based_reranking.py  entity_extraction.py  flag_embedding_reranking.py  llm_reranking.py  ner_extras.py
src/rerankingexperiments/: README.md  evaluate_answers_diff_rerankers.py  generate_answers_diff_rerankers.py  retrieval_evaluation_diff_rerankers.py  retrieve_with_diff_rerankers.py  run_reranking_experiment.py
src/retrieval/: pdf_chunks_retrieval.py  retrieve_and_stitch.py  retrieve_pdf_chunks.py  (+1 more)
(+8 files in other folders)
